--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -16,6 +16,7 @@
         align-items: center;
         min-height: 100px;
         background-color: $white;
+        z-index: 999;
         // Responsive
         @media #{$tablet-device, $large-mobile}{
             min-height: 80px;
@@ -31,6 +32,14 @@
             height: 80px;
             animation: headerSlideDown 0.95s ease forwards;
             box-shadow: 0 8px 20px 0 rgba($black, 0.1);
+        }
+
+        .svg-logo {
+            fill: $thome-blue;
+
+            path {
+              fill: $thome-blue;
+            }
         }
     }
 
@@ -101,7 +110,7 @@
 
 @import "header/logo";
 
-/* header Search Area */ 
+/* header Search Area */
 .header-search-area{
     display: flex;
     align-items: center;
