--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,6 +10,8 @@ $fontAwesome5Pro: "Font Awesome 5 Pro";
 
 
 // Colors ---------------
+$thome-blue: #7FD0DA;
+
 $body-bg: #000;
 $body-color: #748494;
 $body-bg: white;
