--- a/assets/scss/header/_mobile-menu.scss
+++ b/assets/scss/header/_mobile-menu.scss
@@ -22,7 +22,7 @@
     transition: $transition;
     transform: translateX(100%);
     background-color: $secondary;
-    // background-image: url("/images/bg/mobile-bg.jpg");
+    // background-image: url("/images/bg/mobile-bg-ryan-porter.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: top center;
