--- a/assets/scss/titles/_section.scss
+++ b/assets/scss/titles/_section.scss
@@ -105,6 +105,32 @@
     }
 }
 
+.section-statement {
+  z-index: 99;
+  margin-bottom: 100px;
+
+  p {
+    font-size: 18px;
+
+    &:first-child {
+      font-size: 21px;
+    }
+
+    @media #{$small-mobile} {
+      font-size: 16px;
+
+      &:first-child {
+        font-size: 18px;
+      }
+    }
+  }
+
+  // Responsive
+  @media #{$large-mobile}{
+    margin-bottom: 80px;
+  }
+}
+
 .section-title-two{
     position: relative;
     z-index: 99;
